crates/swc_ecma_parser/tests/test262-error-references/fail/56c154237f4f1298.js.stderr
error: Expected unicode escape
 --> $DIR/tests/test262-parser/fail/56c154237f4f1298.js:1:2
  |
1 | a\
  |  ^

